<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/Plain_Text"
      android:textColor="#050505"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/Txt_Text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Caesar_Shift"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/Txt_Text"
      app:layout_constraintTop_toBottomOf="@+id/Txt_Text" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Caesar"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/Txt_caesarShift"
      app:layout_constraintTop_toBottomOf="@+id/Txt_caesarShift" />

  <EditText
      android:id="@+id/Txt_caesarCipher"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textView6"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <Button
      android:id="@+id/Btn_Caesar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginBottom="20dp"
      android:text="@string/Btn_Caesar"
      app:layout_constraintBottom_toTopOf="@+id/Btn_Mono"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/Txt_caesarShift"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="number"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Monoalphabetic"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/Txt_caesarCipher"
      app:layout_constraintTop_toBottomOf="@+id/Txt_caesarCipher" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/MonoalphabeticKeey"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/Txt_Mono"
      app:layout_constraintTop_toBottomOf="@+id/Txt_Mono" />

  <EditText
      android:id="@+id/Txt_Mono"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/textView7"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <Button
      android:id="@+id/Btn_Mono"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginBottom="50dp"
      android:text="@string/Btn_Mono"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/Btn_Clear2"
      android:layout_width="44dp"
      android:layout_height="44dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/Clear"
      android:drawableLeft="@drawable/ic_baseline_clear_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/Btn_back"
      android:layout_width="44dp"
      android:layout_height="44dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/Back"
      android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <EditText
      android:id="@+id/Txt_monoKey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      app:layout_constraintStart_toStartOf="@+id/textView9"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <Button
      android:id="@+id/Btn_next2"
      android:layout_width="48dp"
      android:layout_height="49dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="20dp"
      android:drawableLeft="@drawable/ic_next"
      android:text="@string/Next"
      app:layout_constraintBottom_toTopOf="@+id/Btn_back"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>